--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,6 @@
 :root {
   --container-lrg: 48rem;
-  --container-sml: 24rem;
+  --container-sml: 36rem;
 
   --color-text: #353535;
   --color-border: #808080;
@@ -9,6 +9,14 @@
   --color-light-focus: #bcc8d1;
   --color-primary: #0a3d62;
   --color-primary-focus: #09385a;
+  --color-primary-alt: #1b557f;
+
+  --font-size-reg: 1rem;
+  --font-size-sml: 0.875rem;
+  --font-size-xsml: 0.75rem;
+  --font-weight-med: 600;
+
+  --grid-gap: 2rem;
 }
 
 body {
@@ -23,20 +31,11 @@ body {
   text-align: center;
 }
 
-.header {
-  background: var(--color-primary);
-  color: white;
-  padding: 1rem;
-}
-
-.header.extended {
-  padding: 1rem 1rem 4rem;
-  margin-bottom: -4rem;
-}
 
 .title {
-  margin: 1rem 0;
+  margin: 1rem auto;
   text-align: center;
+  max-width: var(--container-sml);
 }
 
 .subtitle {
@@ -102,6 +101,15 @@ body {
   width: 100%;
 }
 
+.two {
+  display: grid;
+  grid-gap: var(--grid-gap);
+}
+
+.page-content {
+  padding: 1rem;
+}
+
 @media screen and (min-width: 560px) {
   .form {
     grid-template-columns: 1fr 1fr;
@@ -109,6 +117,10 @@ body {
 
   .full {
     grid-column: 1 /3;
+  }
+
+  .two {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -169,7 +181,7 @@ a.button {
   outline: 0;
 }
 
-.button.primary{
+.button.primary {
   color: white;
   background: var(--color-primary);
 }
@@ -181,7 +193,7 @@ a.button {
 
 .card {
   text-align: center;
-  max-width: 24rem;
+  max-width: var(--container-sml);
   padding: 1rem;
   background: white;
   margin: 1rem auto;
