--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -2,6 +2,7 @@
   background: radial-gradient(var(--color-primary-alt), var(--color-primary));
   color: white;
   padding: 1rem;
+  text-align: center;
 }
 
 .header.extended {
