--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 :root {
   --container-lrg: 48rem;
-  --container-sml: 36rem;
+  --container-med: 36rem;
+  --container-sml: 24rem;
 
   --color-text: #353535;
   --color-border: #808080;
@@ -16,7 +17,7 @@
   --font-size-xsml: 0.75rem;
   --font-weight-med: 600;
 
-  --grid-gap: 2rem;
+  --grid-gap: 1rem;
 }
 
 body {
@@ -35,7 +36,7 @@ body {
 .title {
   margin: 1rem auto;
   text-align: center;
-  max-width: var(--container-sml);
+  max-width: var(--container-med);
 }
 
 .subtitle {
@@ -54,10 +55,6 @@ body {
   padding: 0 1rem;
 }
 
-.quote-container {
-  margin: 2rem auto;
-}
-
 .form {
   max-width: var(--container-sml);
   margin: 0 auto;
@@ -71,6 +68,11 @@ body {
   position: relative;
 }
 
+.form-title {
+  margin: 0;
+  text-align: center;
+}
+
 .form::after {
   content: '';
   position: absolute;
@@ -80,10 +82,6 @@ body {
   width: 100%;
   background: linear-gradient(90deg, #eb2f06, #fa983a);
   z-index: 10;
-}
-
-.form h2 {
-  margin: 0 0 1rem;
 }
 
 .full {
@@ -96,12 +94,8 @@ body {
   height: 1.75rem;
 }
 
-
-.ui.input  {
-  width: 100%;
-}
-
-.two {
+.two,
+.three {
   display: grid;
   grid-gap: var(--grid-gap);
 }
@@ -122,29 +116,10 @@ body {
   .two {
     grid-template-columns: 1fr 1fr;
   }
-}
 
-.ui.input input {
-  font-size: 1rem;
-  padding: 0.25rem;
-  line-height: 1;
-  width: 100%;
-  border: none;
-  box-shadow: 0 0 0 1px var(--color-border);
-}
-
-.ui.input input:focus {
-  outline: 0;
-  border: 0;
-  box-shadow: 0 0 0 1px var(--color-text);
-}
-
-
-.field label {
-  display: inline-block;
-  font-size: 0.75rem;
-  margin: 0 0 0.25rem;
-  font-weight: 600;
+  .three {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 .button {
@@ -153,7 +128,7 @@ body {
   line-height: 1;
   text-align: center;
   letter-spacing: 0.05em;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 500;
   background: var(--color-light);
   padding: 0.75rem 1.25rem;
