--- a/src/components/RatingForm/style.module.css
+++ b/src/components/RatingForm/style.module.css
@@ -15,3 +15,38 @@
   width: fit-content;
   justify-self: center;
 }
+
+.form {
+  max-width: var(--container-sml);
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  background: white;
+  grid-gap: 1rem;
+  box-shadow: 0 6px 2px -4px rgba(0, 0, 0, 0.12), 0 2px 8px rgba(0, 0, 0, 0.08);
+  padding: 2rem;
+  z-index: 5;
+  position: relative;
+}
+
+@media screen and (min-width: 560px) {
+  .form {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.form_title {
+  margin: 0;
+  text-align: center;
+}
+
+.form::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 6px;
+  width: 100%;
+  background: linear-gradient(90deg, #eb2f06, #fa983a);
+  z-index: 10;
+}
